# doppler

./: .build.yml  .gitignore  Cargo.toml  README.md
doppler/: Cargo.toml
doppler/resources/shaders/: framebuffers_screen.fs  model_loading.fs  multiple_lights.fs
doppler/src/: assets_cache.rs  camera.rs  client.rs  components.rs  consts.rs  engine.rs  imgui_helper.rs  lib.rs  light.rs  map.rs  mesh.rs  model.rs  shader.rs  sky.rs  utils.rs
examples/: 2d.rs  client.rs
resources/: test_map.yaml  test_objects.txt
resources/objects/grass/: grass.mtl
resources/objects/ground/: ground.mtl
resources/objects/robot/: robot.mtl
resources/objects/ruins/: ruins.mtl
resources/objects/tree/: tree_6_d.mtl
resources/shaders/: framebuffers_screen.fs  multiple_lights.vs
src/: assets_cache.rs  camera.rs  components.rs  consts.rs  engine.rs  example_client.rs  framebuffer.rs  imgui_helper.rs  lib.rs  light.rs  macros.rs  main.rs  map.rs  mesh.rs  model.rs  shader.rs  sky.rs  utils.rs
src/gaia/: assets_cache.rs  bg_info.rs  camera.rs  client.rs  components.rs  consts.rs  engine.rs  framebuffer.rs  imgui_helper.rs  light.rs  macros.rs  mesh.rs  mod.rs  model.rs  shader.rs  sky.rs  utils.rs
