[package]
name = "doppler"
version = "0.1.0"
authors = ["Piotr <siuszko@zoho.com>"]
edition = "2018"

[profile.release]
opt-level = 'z'
panic = 'abort'
lto = true

[dependencies]
gl = "0.14.0"
imgui="0.4"
imgui-winit-support = {version="0.4.0", optional=true}
imgui-opengl-renderer = {version="0.8", optional = true}
cgmath = "0.17.0"
imgui-inspect = {version="0.5.0", optional = true}
imgui-inspect-derive = {version="0.5.0", optional= true}
tobj = "2.0.2"
inline_tweak = "1.0.8"
log = "0.4.11"
simple-logging = "2.0.2"
image2 = { git = "https://github.com/Leinnan/image2-rs", branch="legacy", default-features = false, features=["io"] }
glutin = "0.24.1"

[features]
default = ["imgui_inspect"]
imgui_inspect = ["imgui-inspect-derive","imgui-opengl-renderer", "imgui-inspect", "imgui-winit-support"]

[profile.dev.package."*"]
opt-level = 2