[package]
name = "doppler"
version = "0.1.0"
authors = ["Piotr <mev_lyshkin@protonmail.com>"]
edition = "2018"

[dependencies]
gl = "0.14.0"
cgmath = {version="0.18.0", features=["serde"]}
tobj = "2.0.2"
inline_tweak = "1.0.8"
log = "0.4.11"
simple-logging = "2.0.2"
image2 = { git = "https://github.com/Leinnan/image2-rs", branch="legacy", default-features = false, features=["io"] }
glutin = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
